// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display correctly when post does not have address 1`] = `
<div
  className="post-list-item"
>
  <div
    className="post-list-item__content-container"
  >
    <a
      className="post-list-item__link"
      onClick={[Function]}
    >
      <img
        alt="Travel Image"
        className="post-list-item__image"
        src="https://stravell-production.s3.amazonaws.com/pictures/ea5f10a1-10c3-4cfd-a607-982678db7159/main"
      />
      <div
        className="post-list-item__title-description-container"
      >
        <h1
          className="post-list-item__title"
        >
          Don't Forget Where You Come From.
        </h1>
        <h2
          className="post-list-item__description"
        >
          Discovering the beauty of my country, my home.
        </h2>
      </div>
    </a>
  </div>
  <div>
    <div
      className="post-list-item__author-edit-container"
    >
      <PostAuthor
        authorName="Jenna Jacquelyn"
        authorPhotoURL="https://graph.facebook.com/10161147754845459/picture"
        authorUid="YYFEgQAdBuQIsox3ojncZtpSAmG3"
        avatarSize={40}
      />
    </div>
    <p>
      December 30th, 2018
    </p>
    <Link
      as="/p/show/don-t-forget-where-you-come-from/-LV-kv5VGQDljYtMPt9v"
      href="/post?id=-LV-kv5VGQDljYtMPt9v"
    >
      <a
        className="hide"
      />
    </Link>
  </div>
</div>
`;

exports[`should display correctly when post has an address 1`] = `
<div
  className="post-list-item"
>
  <div
    className="post-list-item__content-container"
  >
    <a
      className="post-list-item__link"
      onClick={[Function]}
    >
      <img
        alt="Travel Image"
        className="post-list-item__image"
        src="https://stravell-production.s3.amazonaws.com/pictures/ea5f10a1-10c3-4cfd-a607-982678db7159/main"
      />
      <div
        className="post-list-item__title-description-container"
      >
        <h1
          className="post-list-item__title"
        >
          Don't Forget Where You Come From.
        </h1>
        <h2
          className="post-list-item__description"
        >
          Discovering the beauty of my country, my home.
        </h2>
      </div>
    </a>
    <div
      className="post-list-item__address-container"
    >
      <Address
        address="Cannes"
        addressClassName="post-list-item__address"
        iconClassName="post-list-item__address-icon"
        placeId={1122313343}
      />
    </div>
  </div>
  <div>
    <div
      className="post-list-item__author-edit-container"
    >
      <PostAuthor
        authorName="Jenna Jacquelyn"
        authorPhotoURL="https://graph.facebook.com/10161147754845459/picture"
        authorUid="YYFEgQAdBuQIsox3ojncZtpSAmG3"
        avatarSize={40}
      />
    </div>
    <p>
      December 30th, 2018
    </p>
    <Link
      as="/p/show/don-t-forget-where-you-come-from/-LV-kv5VGQDljYtMPt9v"
      href="/post?id=-LV-kv5VGQDljYtMPt9v"
    >
      <a
        className="hide"
      />
    </Link>
  </div>
</div>
`;

exports[`the post belongs DO NOT belongs to the current user and props.editable is true should NOT be possible to edit the post 1`] = `
<div
  className="post-list-item"
>
  <div
    className="post-list-item__content-container"
  >
    <a
      className="post-list-item__link"
      onClick={[Function]}
    >
      <img
        alt="Travel Image"
        className="post-list-item__image"
        src="https://stravell-production.s3.amazonaws.com/pictures/ea5f10a1-10c3-4cfd-a607-982678db7159/main"
      />
      <div
        className="post-list-item__title-description-container"
      >
        <h1
          className="post-list-item__title"
        >
          Don't Forget Where You Come From.
        </h1>
        <h2
          className="post-list-item__description"
        >
          Discovering the beauty of my country, my home.
        </h2>
      </div>
    </a>
    <div
      className="post-list-item__address-container"
    >
      <Address
        address="Cannes"
        addressClassName="post-list-item__address"
        iconClassName="post-list-item__address-icon"
        placeId={1122313343}
      />
    </div>
  </div>
  <div>
    <div
      className="post-list-item__author-edit-container"
    >
      <PostAuthor
        authorName="Jenna Jacquelyn"
        authorPhotoURL="https://graph.facebook.com/10161147754845459/picture"
        authorUid="YYFEgQAdBuQIsox3ojncZtpSAmG3"
        avatarSize={40}
      />
    </div>
    <p>
      December 30th, 2018
    </p>
    <Link
      as="/p/show/don-t-forget-where-you-come-from/-LV-kv5VGQDljYtMPt9v"
      href="/post?id=-LV-kv5VGQDljYtMPt9v"
    >
      <a
        className="hide"
      />
    </Link>
  </div>
</div>
`;

exports[`the post belongs to the current user and props.editable is false should NOT be possible to edit the post 1`] = `
<div
  className="post-list-item"
>
  <div
    className="post-list-item__content-container"
  >
    <a
      className="post-list-item__link"
      onClick={[Function]}
    >
      <img
        alt="Travel Image"
        className="post-list-item__image"
        src="https://stravell-production.s3.amazonaws.com/pictures/ea5f10a1-10c3-4cfd-a607-982678db7159/main"
      />
      <div
        className="post-list-item__title-description-container"
      >
        <h1
          className="post-list-item__title"
        >
          Don't Forget Where You Come From.
        </h1>
        <h2
          className="post-list-item__description"
        >
          Discovering the beauty of my country, my home.
        </h2>
      </div>
    </a>
    <div
      className="post-list-item__address-container"
    >
      <Address
        address="Cannes"
        addressClassName="post-list-item__address"
        iconClassName="post-list-item__address-icon"
        placeId={1122313343}
      />
    </div>
  </div>
  <div>
    <div
      className="post-list-item__author-edit-container"
    >
      <PostAuthor
        authorName="Jenna Jacquelyn"
        authorPhotoURL="https://graph.facebook.com/10161147754845459/picture"
        authorUid="YYFEgQAdBuQIsox3ojncZtpSAmG3"
        avatarSize={40}
      />
    </div>
    <p>
      December 30th, 2018
    </p>
    <Link
      as="/p/show/don-t-forget-where-you-come-from/-LV-kv5VGQDljYtMPt9v"
      href="/post?id=-LV-kv5VGQDljYtMPt9v"
    >
      <a
        className="hide"
      />
    </Link>
  </div>
</div>
`;

exports[`the post belongs to the current user and props.editable is true should be possible to edit the post 1`] = `
<div
  className="post-list-item"
>
  <div
    className="post-list-item__content-container"
  >
    <a
      className="post-list-item__link"
      onClick={[Function]}
    >
      <img
        alt="Travel Image"
        className="post-list-item__image"
        src="https://stravell-production.s3.amazonaws.com/pictures/ea5f10a1-10c3-4cfd-a607-982678db7159/main"
      />
      <div
        className="post-list-item__title-description-container"
      >
        <h1
          className="post-list-item__title"
        >
          Don't Forget Where You Come From.
        </h1>
        <h2
          className="post-list-item__description"
        >
          Discovering the beauty of my country, my home.
        </h2>
      </div>
    </a>
    <div
      className="post-list-item__address-container"
    >
      <Address
        address="Cannes"
        addressClassName="post-list-item__address"
        iconClassName="post-list-item__address-icon"
        placeId={1122313343}
      />
    </div>
  </div>
  <div>
    <div
      className="post-list-item__author-edit-container"
    >
      <PostAuthor
        authorName="Jenna Jacquelyn"
        authorPhotoURL="https://graph.facebook.com/10161147754845459/picture"
        authorUid="YYFEgQAdBuQIsox3ojncZtpSAmG3"
        avatarSize={40}
      />
      <Link
        as="/p/edit/don-t-forget-where-you-come-from/-LV-kv5VGQDljYtMPt9v"
        href="/editPost?id=-LV-kv5VGQDljYtMPt9v"
        prefetch={true}
      >
        <a
          className="button"
        >
          Edit
        </a>
      </Link>
    </div>
    <p>
      December 30th, 2018
    </p>
    <Link
      as="/p/show/don-t-forget-where-you-come-from/-LV-kv5VGQDljYtMPt9v"
      href="/post?id=-LV-kv5VGQDljYtMPt9v"
    >
      <a
        className="hide"
      />
    </Link>
  </div>
</div>
`;

exports[`the post contains a body and no URL has been provided should render correctly 1`] = `
<div
  className="post-list-item"
>
  <div
    className="post-list-item__content-container"
  >
    <a
      className="post-list-item__link"
      onClick={[Function]}
    >
      <img
        alt="Travel Image"
        className="post-list-item__image"
        src="https://stravell-production.s3.amazonaws.com/pictures/ea5f10a1-10c3-4cfd-a607-982678db7159/main"
      />
      <div
        className="post-list-item__title-description-container"
      >
        <h1
          className="post-list-item__title"
        >
          Don't Forget Where You Come From.
        </h1>
        <h2
          className="post-list-item__description"
        >
          Discovering the beauty of my country, my home.
        </h2>
      </div>
    </a>
    <div
      className="post-list-item__address-container"
    >
      <Address
        address="Cannes"
        addressClassName="post-list-item__address"
        iconClassName="post-list-item__address-icon"
        placeId={1122313343}
      />
    </div>
  </div>
  <div>
    <div
      className="post-list-item__author-edit-container"
    >
      <PostAuthor
        authorName="Jenna Jacquelyn"
        authorPhotoURL="https://graph.facebook.com/10161147754845459/picture"
        authorUid="YYFEgQAdBuQIsox3ojncZtpSAmG3"
        avatarSize={40}
      />
    </div>
    <p>
      December 30th, 2018
    </p>
    <Link
      as="/p/show/don-t-forget-where-you-come-from/-LV-kv5VGQDljYtMPt9v"
      href="/post?id=-LV-kv5VGQDljYtMPt9v"
    >
      <a
        className="hide"
      />
    </Link>
  </div>
</div>
`;
